solved issue with vertical collapse with sidebar / spacing issue

--- a/client/src/components/room-list-nav/room-list-nav.styles.scss
+++ b/client/src/components/room-list-nav/room-list-nav.styles.scss
@@ -10,10 +10,8 @@
 
   .room-item {
     z-index: 1;
-    margin-bottom: 1rem;
+    margin: 0.5rem 0;
     // background-color: pink;
-
-    // margin-bottom: 10px;
   }
 
   .indicator {
